Enhance button styles: introduce new size variants, add icon-only button options, and improve shared styles for better consistency across button types.

--- a/src/app/pages/button/button.html
+++ b/src/app/pages/button/button.html
@@ -455,4 +455,87 @@
 <button class="btn-link-danger-gray btn-xl icon-before dot">Button XL</button>&nbsp;
 <button class="btn-link-danger-gray btn-2xl icon-before dot">Button 2XL</button>
 <br><br>
+<h2>Icon-Only Square Buttons</h2>
 
+<h3>Primary Icon-Only</h3>
+<button class="btn-primary btn-sm icon-only circle"></button>&nbsp;
+<button class="btn-primary btn-md icon-only circle"></button>&nbsp;
+<button class="btn-primary btn-lg icon-only circle"></button>&nbsp;
+<button class="btn-primary btn-xl icon-only circle"></button>&nbsp;
+<button class="btn-primary btn-2xl icon-only circle"></button>
+<br><br>
+
+<h3>Secondary Icon-Only</h3>
+<button class="btn-secondary btn-sm icon-only circle"></button>&nbsp;
+<button class="btn-secondary btn-md icon-only circle"></button>&nbsp;
+<button class="btn-secondary btn-lg icon-only circle"></button>&nbsp;
+<button class="btn-secondary btn-xl icon-only circle"></button>&nbsp;
+<button class="btn-secondary btn-2xl icon-only circle"></button>
+<br><br>
+
+<h3>Secondary Gray Icon-Only</h3>
+<button class="btn-secondary-gray btn-sm icon-only circle"></button>&nbsp;
+<button class="btn-secondary-gray btn-md icon-only circle"></button>&nbsp;
+<button class="btn-secondary-gray btn-lg icon-only circle"></button>&nbsp;
+<button class="btn-secondary-gray btn-xl icon-only circle"></button>&nbsp;
+<button class="btn-secondary-gray btn-2xl icon-only circle"></button>
+<br><br>
+
+<h3>Tertiary Icon-Only</h3>
+<button class="btn-tertiary btn-sm icon-only circle"></button>&nbsp;
+<button class="btn-tertiary btn-md icon-only circle"></button>&nbsp;
+<button class="btn-tertiary btn-lg icon-only circle"></button>&nbsp;
+<button class="btn-tertiary btn-xl icon-only circle"></button>&nbsp;
+<button class="btn-tertiary btn-2xl icon-only circle"></button>
+<br><br>
+
+<h3>Tertiary Gray Icon-Only</h3>
+<button class="btn-tertiary-gray btn-sm icon-only circle"></button>&nbsp;
+<button class="btn-tertiary-gray btn-md icon-only circle"></button>&nbsp;
+<button class="btn-tertiary-gray btn-lg icon-only circle"></button>&nbsp;
+<button class="btn-tertiary-gray btn-xl icon-only circle"></button>&nbsp;
+<button class="btn-tertiary-gray btn-2xl icon-only circle"></button>
+<br><br>
+
+
+<h2>Danger Icon-Only Square Buttons</h2>
+
+<h3>Primary Danger Icon-Only</h3>
+<button class="btn-primary-danger btn-sm icon-only circle"></button>&nbsp;
+<button class="btn-primary-danger btn-md icon-only circle"></button>&nbsp;
+<button class="btn-primary-danger btn-lg icon-only circle"></button>&nbsp;
+<button class="btn-primary-danger btn-xl icon-only circle"></button>&nbsp;
+<button class="btn-primary-danger btn-2xl icon-only circle"></button>
+<br><br>
+
+<h3>Secondary Danger Icon-Only</h3>
+<button class="btn-secondary-danger btn-sm icon-only circle"></button>&nbsp;
+<button class="btn-secondary-danger btn-md icon-only circle"></button>&nbsp;
+<button class="btn-secondary-danger btn-lg icon-only circle"></button>&nbsp;
+<button class="btn-secondary-danger btn-xl icon-only circle"></button>&nbsp;
+<button class="btn-secondary-danger btn-2xl icon-only circle"></button>
+<br><br>
+
+<h3>Secondary Danger Gray Icon-Only</h3>
+<button class="btn-secondary-danger-gray btn-sm icon-only circle"></button>&nbsp;
+<button class="btn-secondary-danger-gray btn-md icon-only circle"></button>&nbsp;
+<button class="btn-secondary-danger-gray btn-lg icon-only circle"></button>&nbsp;
+<button class="btn-secondary-danger-gray btn-xl icon-only circle"></button>&nbsp;
+<button class="btn-secondary-danger-gray btn-2xl icon-only circle"></button>
+<br><br>
+
+<h3>Tertiary Danger Icon-Only</h3>
+<button class="btn-tertiary-danger btn-sm icon-only circle"></button>&nbsp;
+<button class="btn-tertiary-danger btn-md icon-only circle"></button>&nbsp;
+<button class="btn-tertiary-danger btn-lg icon-only circle"></button>&nbsp;
+<button class="btn-tertiary-danger btn-xl icon-only circle"></button>&nbsp;
+<button class="btn-tertiary-danger btn-2xl icon-only circle"></button>
+<br><br>
+
+<h3>Tertiary Danger Gray Icon-Only</h3>
+<button class="btn-tertiary-danger-gray btn-sm icon-only circle"></button>&nbsp;
+<button class="btn-tertiary-danger-gray btn-md icon-only circle"></button>&nbsp;
+<button class="btn-tertiary-danger-gray btn-lg icon-only circle"></button>&nbsp;
+<button class="btn-tertiary-danger-gray btn-xl icon-only circle"></button>&nbsp;
+<button class="btn-tertiary-danger-gray btn-2xl icon-only circle"></button>
+<br><br>
