--- a/src/app/pages/button/button.html
+++ b/src/app/pages/button/button.html
@@ -7,6 +7,8 @@
 <button class="btn-primary btn-xl">Button XL</button>&nbsp;
 <button class="btn-primary btn-2xl">Button 2XL</button>
 <br><br>
+<button class="btn-primary btn-sm" disabled>Button SM Disabled</button>
+<br><br>
 
 <h3>Secondary</h3>
 <button class="btn-secondary btn-sm">Button SM</button>&nbsp;
@@ -14,6 +16,8 @@
 <button class="btn-secondary btn-lg">Button LG</button>&nbsp;
 <button class="btn-secondary btn-xl">Button XL</button>&nbsp;
 <button class="btn-secondary btn-2xl">Button 2XL</button>
+<br><br>
+<button class="btn-secondary btn-sm" disabled>Button SM Disabled</button>
 <br><br>
 
 <h3>Secondary Gray</h3>
@@ -23,6 +27,8 @@
 <button class="btn-secondary-gray btn-xl">Button XL</button>&nbsp;
 <button class="btn-secondary-gray btn-2xl">Button 2XL</button>
 <br><br>
+<button class="btn-secondary-gray btn-sm" disabled>Button SM Disabled</button>
+<br><br>
 
 <h3>Tertiary</h3>
 <button class="btn-tertiary btn-sm">Button SM</button>&nbsp;
@@ -30,6 +36,8 @@
 <button class="btn-tertiary btn-lg">Button LG</button>&nbsp;
 <button class="btn-tertiary btn-xl">Button XL</button>&nbsp;
 <button class="btn-tertiary btn-2xl">Button 2XL</button>
+<br><br>
+<button class="btn-tertiary btn-sm" disabled>Button SM Disabled</button>
 <br><br>
 
 <h3>Tertiary Gray</h3>
@@ -39,6 +47,8 @@
 <button class="btn-tertiary-gray btn-xl">Button XL</button>&nbsp;
 <button class="btn-tertiary-gray btn-2xl">Button 2XL</button>
 <br><br>
+<button class="btn-tertiary-gray btn-sm" disabled>Button SM Disabled</button>
+<br><br>
 
 <h3>Link Primary</h3>
 <button class="btn-link-primary btn-sm">Button SM</button>&nbsp;
@@ -47,6 +57,8 @@
 <button class="btn-link-primary btn-xl">Button XL</button>&nbsp;
 <button class="btn-link-primary btn-2xl">Button 2XL</button>
 <br><br>
+<button class="btn-link-primary btn-sm" disabled>Button SM Disabled</button>
+<br><br>
 
 <h3>Link Gray</h3>
 <button class="btn-link-gray btn-sm">Button SM</button>&nbsp;
@@ -54,6 +66,8 @@
 <button class="btn-link-gray btn-lg">Button LG</button>&nbsp;
 <button class="btn-link-gray btn-xl">Button XL</button>&nbsp;
 <button class="btn-link-gray btn-2xl">Button 2XL</button>
+<br><br>
+<button class="btn-link-gray btn-sm" disabled>Button SM Disabled</button>
 <br><br>
 
 <h2>Danger Buttons - All Sizes</h2>
@@ -65,6 +79,8 @@
 <button class="btn-primary-danger btn-xl">Button XL</button>&nbsp;
 <button class="btn-primary-danger btn-2xl">Button 2XL</button>
 <br><br>
+<button class="btn-primary-danger btn-sm" disabled>Button SM Disabled</button>
+<br><br>
 
 <h3>Secondary Danger</h3>
 <button class="btn-secondary-danger btn-sm">Button SM</button>&nbsp;
@@ -72,6 +88,8 @@
 <button class="btn-secondary-danger btn-lg">Button LG</button>&nbsp;
 <button class="btn-secondary-danger btn-xl">Button XL</button>&nbsp;
 <button class="btn-secondary-danger btn-2xl">Button 2XL</button>
+<br><br>
+<button class="btn-secondary-danger btn-sm" disabled>Button SM Disabled</button>
 <br><br>
 
 <h3>Secondary Danger Gray</h3>
@@ -81,6 +99,8 @@
 <button class="btn-secondary-danger-gray btn-xl">Button XL</button>&nbsp;
 <button class="btn-secondary-danger-gray btn-2xl">Button 2XL</button>
 <br><br>
+<button class="btn-secondary-danger-gray btn-sm" disabled>Button SM Disabled</button>
+<br><br>
 
 <h3>Tertiary Danger</h3>
 <button class="btn-tertiary-danger btn-sm">Button SM</button>&nbsp;
@@ -88,6 +108,8 @@
 <button class="btn-tertiary-danger btn-lg">Button LG</button>&nbsp;
 <button class="btn-tertiary-danger btn-xl">Button XL</button>&nbsp;
 <button class="btn-tertiary-danger btn-2xl">Button 2XL</button>
+<br><br>
+<button class="btn-tertiary-danger btn-sm" disabled>Button SM Disabled</button>
 <br><br>
 
 <h3>Tertiary Danger Gray</h3>
@@ -97,6 +119,8 @@
 <button class="btn-tertiary-danger-gray btn-xl">Button XL</button>&nbsp;
 <button class="btn-tertiary-danger-gray btn-2xl">Button 2XL</button>
 <br><br>
+<button class="btn-tertiary-danger-gray btn-sm" disabled>Button SM Disabled</button>
+<br><br>
 
 <h3>Link Danger Primary</h3>
 <button class="btn-link-danger-primary btn-sm">Button SM</button>&nbsp;
@@ -105,6 +129,8 @@
 <button class="btn-link-danger-primary btn-xl">Button XL</button>&nbsp;
 <button class="btn-link-danger-primary btn-2xl">Button 2XL</button>
 <br><br>
+<button class="btn-link-danger-primary btn-sm" disabled>Button SM Disabled</button>
+<br><br>
 
 <h3>Link Danger Gray</h3>
 <button class="btn-link-danger-gray btn-sm">Button SM</button>&nbsp;
@@ -112,6 +138,8 @@
 <button class="btn-link-danger-gray btn-lg">Button LG</button>&nbsp;
 <button class="btn-link-danger-gray btn-xl">Button XL</button>&nbsp;
 <button class="btn-link-danger-gray btn-2xl">Button 2XL</button>
+<br><br>
+<button class="btn-link-danger-gray btn-sm" disabled>Button SM Disabled</button>
 <br><br>
 
 <h2>Icon Buttons - Circle Before</h2>
